<resources>
    <string name="app_name" translatable="false">Quotation Shake</string>

    <!-- Dashboard Activity -->
    <string name="activity_dashboard" translatable="false">Quotation Shake</string>
    <string name="btn_get_quotations">Get quotations</string>
    <string name="btn_favorite_quotations">Favourite quotations</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>

    <!-- Random Activity -->
    “Hello
    %1s!\nPress Refresh to get a new quotation”, “This is a sample quotation”, “This is a
    sample autor”
    <string name="activity_random_quotations">Random quotations</string>
    <string name="quotation_hint">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotation_sample_text">This is a sample quotation, sample quote %1$d</string>
    <string name="quotation_sample_author">This is a sample author, sample author %1$d</string>

    <!-- Favourite Activity -->
    <string name="activity_favourite_quotations">Favourite quotations</string>
    <string name="favourite_author_info">Author info</string>
    <string name="favourite_dialog_delete">Are you sure that you want to delete this quotation?</string>
    <string name="favourite_dialog_clear_all">Are you sure that you want to delete ALL your favourite quotations?</string>

    <!-- Settings Activity -->
    <string name="activity_settings">Settings</string>
    <string name="settings_name_label">Name that identifies the user</string>
    <string name="settings_key">username</string>
    <string name="settings_name_placeholder">Insert your name</string>
    <string name="settings_language_label">Quotations will be received in the selected language</string>
    <string name="settings_method_label">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_method_get" translatable="false">GET</string>
    <string name="settings_method_post" translatable="false">POST</string>
    <string name="settings_databases">Databases</string>
    <string name="opcionesAcceso">Access Options</string>
    <string name="settings_idioma_key">idioma</string>
    <string name="settings_http_key">http</string>

    <!-- About Activity -->
    <string name="activity_about">About</string>
    <string name="about_main_text">Quotation Shake by\n\nYeray Molina García\nCristian Zazo Millán\n\nyemogar@inf.upv.es\ncrizamil@inf.upv.es\n\n2019</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="author_anonymous">Anonymous</string>
    <string name="author_error">It\'s not possible to retrieve more quotations of an anonymous author.</string>

    <!-- Actions -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear All</string>
    <string name="title_activity_settings">Settings</string>

</resources>
