<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/editText"
        android:defaultValue="Default value"
        android:key="@string/settings_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_name_label" />
    <PreferenceCategory android:title="Web Services">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/languages"
            android:entryValues="@array/languagesValue"
            android:key="@string/language_english"
            android:title="@string/settings_language_label" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/metodos"
            android:entryValues="@array/metodosValue"
            android:key="@string/settings_method_post"
            android:title="@string/settings_method_label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_databases">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/opcionesAcceso"
            android:entryValues="@array/opcionesAccesoValues"
            android:key="list_preference_1"
            android:title="@string/opcionesAcceso" />
    </PreferenceCategory>
</PreferenceScreen>